--- a/html-basic-tags/index.html
+++ b/html-basic-tags/index.html
@@ -28,10 +28,45 @@
         -->
 
         <h1> basic html tags </h1>
+        <h3> Paragraph tag </h3>
         <p> this page demonstrates the basic structure of an html web page. the head area has
             the browse title tab specified as well as the charset defined. the body is demonstrating
             the h1 header tag and the paragraph tag.
         </p>
         <p> this is another paragraph </p>
+        <!--
+            if you wish to use a component of a reserved tag (or the whole tag)
+            you would be in trouble using the tag. instead: you can use special
+            character strings to represent components of the tag such as the < (&lt;)
+            and the > (&gt;) symbols
+        -->
+        <h3> List tags: &lt;ol&gt; and &lt;ul&gt;</h3>
+        <!--
+            block tag , paired
+            create an ordered list (numbered) using <ol>
+            create an unordered list (bulleted) using <ul>
+            items in the list are indicated using the line item <li>
+        -->
+        <ol>
+            <li> Add extension Live Server for Go Live execution from VSC </li>
+            <li> Open extension using 5 icon on left by menu </li>
+            <li> Either search for Live Server or select if seen in list </li>
+            <li> Press install </li>
+            <li> To use
+                <ol><li> Open an html page </li>
+                <li> Make any adjustments </li>
+                <li> Save adjustments </li>
+                <li> Look to bottom right on blue status line for Go Live and press </li>
+                <li> Make additional adjustments, save and return to browser to see updates </li>
+            </ol>
+        </li>
+    </ol>
+    <ul>
+        <li> This is an unordered list </li>
+        <li> Default display is a bulleted list </li>
+        <li> We will see later how to remove these bullets using css styling </li>
+    </ul>
+        
+    </ol>
     </body>
 </html>
