--- a/html-basic-tags/index.html
+++ b/html-basic-tags/index.html
@@ -66,7 +66,22 @@
         <li> Default display is a bulleted list </li>
         <li> We will see later how to remove these bullets using css styling </li>
     </ul>
+
+    <h3> Anchor tag (a.k.a. linking to another page) </h3>
+    <!-- blocked paired
+        This is an anchor tag and is incorrectly often referred to as the link tag
+        One should NOT use the link tag because there is actually a <link> used in the <head> section
+        The anchor tag can take you to a different location whether it be on a different website,
+        different page in the current website or a different location on the current page
+
+        parameter:
+        href: points to the desired location
+        target: indicates the browser page display option
+                default is same display page tab
+                _blank will open a new browser tab (page)
+    -->
+    <a href="https://www.nait.ca" target="_blank"> go to NAIT </a>
         
-    </ol>
+    
     </body>
 </html>
