--- a/html-basic-tags/index.html
+++ b/html-basic-tags/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang "en-us">
+<html lang="en-us">
     <head>
         <!--
             this is a comment, it is not html code or content
@@ -15,8 +15,8 @@
         
         -->
         <title> basic html structure</title>
-        <meta charset "utf-8">
-        <meta name "author" content="Noah Fithen">
+        <meta charset="utf-8">
+        <meta name="author" content="Noah Fithen">
     </head>
     <body>
         <!--
