Properly setup figures demo

--- a/framework/index.html
+++ b/framework/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang "en-us">
     <head>
-        <title> basic html structure </title>
-        <meta charset "utf-8">
-        <meta name "author" content="Noah Fithen">
+        <title> Figures Demo </title>
+        <meta charset="utf-8">
+        <meta name="author" content="Noah Fithen">
     </head>
     <body>
-       
+
     </body>
 </html>
