--- a/table-demo/index.html
+++ b/table-demo/index.html
@@ -13,7 +13,8 @@
         If you’re a Canadian business looking for a suitable hosting provider then take a look at our list below of Canadian web hosts.
         </p>
 
-        <!-- The borders="1" will add a default border around the table and each cell-->
+        <!-- The borders="1" will add a default border around the table and each cell
+                This is a known error, you can use this on your tables until we get to css-->
         <table border="1">
             <thead>
                 <!-- The thead will indicate a line for column headers. The cell tag for this line will be <th>. The contents of the cell will be bolded by default
