--- a/framework/index.html
+++ b/framework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang "en-us">
+<html lang="en-us">
     <head>
         <title> Figures Demo </title>
         <meta charset="utf-8">
