Updated framework to add semantic skeleton

--- a/framework/index.html
+++ b/framework/index.html
@@ -6,6 +6,15 @@
         <meta name="author" content="Noah Fithen">
     </head>
     <body>
+        <header>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+            
+        </footer>
 
     </body>
 </html>
