demo semantic tags section, aside

--- a/semantic-basics/index.html
+++ b/semantic-basics/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title> Figures Demo </title>
+        <title> Semantic Basics </title>
         <meta charset="utf-8">
         <meta name="author" content="Noah Fithen">
     </head>
