--- a/navigation/index.html
+++ b/navigation/index.html
@@ -7,9 +7,28 @@
     </head>
     <body>
         <header>
-
+            <h1>Navigation Menus</h1>
+            <nav>
+                <h2>Nav tag titles are optional</h2>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="semantics-tags.html">Semantics</a></li>
+                    <li><a href="html-basic-tags/index.html">Html Basics</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
+            <section>
+                <h2>Create navigational links</h2>
+                <p>Navigational links are simple anchor tags with appropriate relative addressing for the href parameter</p>
+                    <ul>
+                        <li>page to page within the same folder</li>
+                        <li>page to page between folders</li>
+                        <li>stay on the current page using the pound symbol (#)</li>
+                    </ul>
+                
+                <p>Until otherwise told, your nav semantic tag may have an optional h2 heading. Yes, you will get a document error but it will be acceptable.</p>
+            </section>
 
         </main>
         <footer>
