--- a/css-intro/index-stylesheet.html
+++ b/css-intro/index-stylesheet.html
@@ -4,6 +4,9 @@
         <title>CSS StyleSheet</title>
         <meta charset="utf-8">
         <meta name="author" content="Noah Fithen">
+        <!-- Using CSS located inside a stylesheet requires a link tag to point to the CSS file. Use relative addressing to point to reference the CSS stylesheet.
+                The href on the link tag can point to css files locally AND/OR on a different web site-->
+        <link href="css/mystyling.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -20,7 +23,27 @@
 
         </header>
         <main>
-
+            <section>
+                <h2>Sample Embedded CSS</h2>
+                <p style="font-family:Calibri;">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into 
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <p style="color:forestgreen; font-weight: bold;">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into 
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into 
+                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </section>
         </main>
         <footer>
             
