--- a/framework/index.html
+++ b/framework/index.html
@@ -4,17 +4,20 @@
         <title> Title here </title>
         <meta charset="utf-8">
         <meta name="author" content="Noah Fithen">
+        <link href="css/reset.css" rel="stylesheet"
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <div class="container">
+            <header>
 
-        </header>
-        <main>
+            </header>
+            <main>
 
-        </main>
-        <footer>
-            
-        </footer>
-
+            </main>
+            <footer>
+                
+            </footer>
+        </div>
     </body>
 </html>
