--- a/demo-page-layout/index.html
+++ b/demo-page-layout/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title> Title here </title>
+        <title>CSS Center Page Demo</title>
         <meta charset="utf-8">
         <meta name="author" content="Noah Fithen">
-        <link href="css/reset.css" rel="stylesheet"
+        <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
+        
     </head>
     <body>
         <div class="container">
+            <nav>
+                <h2>Navigation</h2>
+            </nav>
             <header>
-
+                <h1>Header</h1>
             </header>
             <main>
+                <h2>Main</h2>
+                <section>
+                    <h2>Section</h2>
+                </section>
 
             </main>
             <footer>
-                
+                <h2>Footer</h2>
             </footer>
         </div>
     </body>
