--- a/framework/index.html
+++ b/framework/index.html
@@ -4,7 +4,7 @@
         <title> Title here </title>
         <meta charset="utf-8">
         <meta name="author" content="Noah Fithen">
-        <link href="css/reset.css" rel="stylesheet"
+        <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
