--- a/framework/index.html
+++ b/framework/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title> Title here </title>
-        <meta charset="utf-8">
-        <meta name="author" content="Noah Fithen">
+        <title>CSS Introduction</title>
+        <meta charset="utf-8" >
+        <meta name="author" content="Don Welch"> 
         <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <header>
-
+                
             </header>
             <main>
 
             </main>
             <footer>
-                
+
             </footer>
         </div>
     </body>
