--- a/framework/index.html
+++ b/framework/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>CSS Introduction</title>
         <meta charset="utf-8" >
-        <meta name="author" content="Don Welch"> 
+        <meta name="author" content="Noah Fithen"> 
         <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
     </head>
