--- a/framework/index.html
+++ b/framework/index.html
@@ -2,15 +2,15 @@
 <html lang="en-us">
     <head>
         <title>CSS Introduction</title>
-        <meta charset="utf-8" >
-        <meta name="author" content="Don Welch"> 
+        <meta charset="utf-8">
+        <meta name="author" content="Noah Fithen"> 
         <link href="css/reset.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <header>
-                
+                Hello
             </header>
             <main>
 
