--- a/demo-styling-forms/index.html
+++ b/demo-styling-forms/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="phone-number">
                             <label for="phone">Phone Number</label>
-                            <input id="phone" name="phone" type="phone" placeholder="enter phone number">   
+                            <input id="phone" name="phone" type="tel" placeholder="enter phone number">   
                         </div>
                         <div class="comment-message">
                             <label for="message">Message</label>
